Prevent status box from wrapping lines

--- a/frontend/src/Monitor/Monitor.css
+++ b/frontend/src/Monitor/Monitor.css
@@ -40,6 +40,9 @@
 
 .statusIndicator {
     padding: 30px;
+    overflow: hidden;
+    text-overflow: clip;
+    white-space: nowrap;
 }
 
 .statusIndicatorGood {
